# waccy

./: .coderabbit.yaml  .coverage 3  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  justfile  mkdocs.yml  pyproject.dev.toml  pyproject.toml  skills-lock.json
.agents/skills/balance-sheet/: SKILL.md
.agents/skills/cash-flow/: SKILL.md
.agents/skills/extract/: SKILL.md
.agents/skills/income-statement/: SKILL.md
.agents/skills/model/: SKILL.md
.agents/skills/query/: SKILL.md
.agents/skills/waccy-install/: SKILL.md
.agents/skills/waccy-status/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature-slice.yml
.github/workflows/: ci.yml  codeql-analysis.yml  pages.yml  publish.yml  release.yml
Formula/: waccy.rb
crates/waccy-cli/: Cargo.toml
crates/waccy-cli/src/: main.rs
crates/waccy-core/: Cargo.toml
crates/waccy-core/src/: error.rs  lib.rs  models.rs  validation.rs
crates/waccy-core/src/classification/: mod.rs  ontology.rs
crates/waccy-core/src/extraction/: edgar.rs  mod.rs  qbo.rs
crates/waccy-core/src/modeling/: mod.rs
crates/waccy-core/src/query/: mod.rs
crates/waccy-core/src/utils/: dates.rs
crates/waccy-mcp/: Cargo.toml
crates/waccy-mcp/src/: main.rs  server.rs  tools.rs
crates/waccy-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/waccy-node/src/: lib.rs
crates/waccy-python/: Cargo.toml  pyproject.toml
crates/waccy-python/python/waccy/: __init__.py
crates/waccy-python/src/: lib.rs
docs/: 0-MISSION.md  0-mission.md  1-ARCHITECTURE.md  1-EXPERIENCE.md  1-experience.md  2-EXPERIENCE.md  2-REQUIREMENTS.md  2-requirements.md  3-ARCHITECTURE.md  3-architecture.md  4-TESTING.md  4-testing.md  skills_models.md
docs/engineering/: README.md
docs/engineering/adr/: 001-polars-over-datafusion.md
docs/journeys/: README.md
docs/product/: README.md
extensions/: README.md
extensions/waccy-edgar/: README.md  pyproject.toml
extensions/waccy-edgar/src/waccy_edgar/: __init__.py  companyfacts.py  extractor.py
extensions/waccy-quickbooks/: README.md  pyproject.toml
extensions/waccy-quickbooks/src/waccy_quickbooks/: __init__.py  auth.py  client.py  extractor.py  models.py  normalizer.py
legacy/: Makefile  codecov.yml  main.py
legacy/docs/: 0-MISSION.md  1-EXPERIENCE.md
legacy/extensions/waccy-edgar/: README.md
legacy/extensions/waccy-edgar/src/waccy_edgar/: __init__.py  extractor.py
legacy/extensions/waccy-quickbooks/: README.md  pyproject.toml
legacy/extensions/waccy-quickbooks/src/waccy_quickbooks/: extractor.py  token_cache.py
legacy/scripts/: build-extension.py  publish.py
legacy/src/waccy/: cli.py
legacy/src/waccy/classification/: __init__.py  patterns.py
legacy/src/waccy/core/: models.py  ontology.py  validation.py
legacy/src/waccy/extraction/: mapper.py
legacy/src/waccy/modeling/: __init__.py
legacy/src/waccy/utils/: dates.py
legacy/tests/: __init__.py
legacy/tests/bdd/: test_three_statement_model_outcomes.py
legacy/tests/bdd/features/: three_statement_model.feature
legacy/tests/conformance/edgar/: source-fixture.json
legacy/tests/conformance/qbo/: expected-normalized.json  expected-validated.json  source-fixture.json
legacy/tests/fixtures/: sample_data.py
legacy/tests/integration/: __init__.py
legacy/tests/unit/: __init__.py  test_extraction.py
schemas/: diagnostics.schema.json  financial-dataset.schema.json  model-output.schema.json
scripts/: build-extension.py  generate-conformance-fixtures.py  generate-schemas.py  install.sh  publish-extension.py  publish.py
src/waccy/: __init__.py  cli.py
src/waccy/classification/: __init__.py  confidence.py  engine.py  patterns.py
src/waccy/core/: __init__.py  models.py  ontology.py  validation.py
src/waccy/extraction/: __init__.py  base.py  mapper.py  registry.py
src/waccy/modeling/: __init__.py  builder.py  exporters.py  templates.py
src/waccy/utils/: __init__.py  dates.py  formatting.py  validation.py
tests/: Cargo.toml
tests/conformance/edgar/: expected-diagnostics.json  expected-mapped.json  expected-model.json  expected-normalized.json  expected-validated.json
tests/conformance/qbo/: expected-diagnostics.json  expected-mapped.json  expected-model.json
tests/fixtures/: __init__.py  qbo_release_smoke_raw.json  sample_data.py
tests/src/: lib.rs
tests/unit/: test_conformance_fixtures.py  test_edgar_companyfacts.py  test_ontology.py  test_quickbooks_client.py  test_schemas.py  test_supporting_modules.py  test_v010_pipeline.py
