[package]
name = "waccy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "waccy"
path = "src/main.rs"

[dependencies]
waccy-core = { path = "../waccy-core" }

clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
colored = "2"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
