[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "waccy"
version = "0.1.0"
description = "Intelligent financial modelling for small businesses"
readme = "../../legacy/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["finance", "financial-modeling", "accounting", "valuation", "polars"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "waccy._lib"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
